--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
     "vite": "^5.3.4"
   },
   "dependencies": {
+    "axios": "^1.7.5",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "klinecharts": "^9.8.10",
+    "luxon": "^3.5.0",
+    "request": "^2.88.2",
     "requirejs": "^2.3.7",
     "three": "^0.166.1"
   },
